# second_brain

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT-MAP.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  CONTEXT.md  Cargo.toml  Dockerfile
backend/docs/adr/: 0001-concept-identity-via-embedding-match.md  0002-edges-typed-directional-accreting.md  0003-ontology-governance-fractal-tolerance-event-sourced-refactor.md  0004-retrieval-seed-then-expand-graph-load-bearing.md  0005-chat-grounded-synthesis-citations-graph-constrained-inference.md  0006-chat-writes-back-governed-inference-proposals-origin-typed-provenance.md  0007-ingest-on-submit-immutable-thought-snapshots-error-correction-edits.md  0008-frontend-strictly-view-thematic-read-model-backend-owned.md  0009-thematic-inference-frozen-evidence-snapshot-endorsement-immutable.md  0010-concept-extraction-provenance-symmetric-to-edges.md
backend/src/: braindump.rs  chat.rs  chat_inference.rs  config.rs  db.rs  delta.rs  embedding.rs  error.rs  extractor.rs  fallback.rs  gemini.rs  graph.rs  graph_repo.rs  lib.rs  llm.rs  logs.rs  main.rs  ontology.rs  retrieval.rs  snapshot.rs  state.rs  thematic.rs
backend/src/auth/: cookie.rs  middleware.rs  mod.rs  session.rs  webauthn.rs
backend/src/routes/: admin.rs  auth.rs  braindump.rs  chat.rs  chat_inference.rs  delta.rs  health.rs  merge.rs  mod.rs  ontology.rs  retrieval.rs  snapshot.rs  stt.rs  thematic.rs
backend/tests/: admin_invites.rs  admin_logs.rs  admin_system.rs  async_ingest.rs  auth.rs  braindump.rs  chat.rs  chat_inferences.rs  chat_macrostructure.rs  deepgram_proxy.rs  deletion.rs  delta_sync.rs  extraction.rs  gemini_timeout.rs  health.rs  ingest_logging.rs  invite_registration.rs  merge_suggestions.rs  ontology.rs  ontology_governance.rs  per_user_isolation.rs  retrieval.rs  thematic.rs  topology_snapshot.rs
docs/: first_draft.md
docs/agents/: domain.md
docs/findings/: 0001-braindump-graph-visibility-delay.md
frontend/: .env.example  .gitignore  AGENTS.md  CONTEXT.md  eslint.config.js  node_modules  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/docs/adr/: 0001-the-consumer-rule.md  0002-whole-graph-fetch-pull-on-focus-no-push.md  0003-edit-verbatim-never-cleaned.md  0004-hitl-queue-bifurcated-by-epistemic-weight.md  0005-one-named-write-intent-exception-service-worker-stays-dumb.md
frontend/src/: app.css  app.html  service-worker.ts  vite-env.d.ts
frontend/src/lib/admin/: logs.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.webmanifest
frontend/tests/e2e/: admin-invites.spec.ts  admin-logs.spec.ts  auth.spec.ts  graph.spec.ts  smoke.spec.ts
frontend/tests/unit/: ChatSurface.test.ts  DocumentModal-edit.test.ts  DocumentModal.test.ts  active-capture-flow.test.ts  active-capture-store.test.ts  admin-invites-store.test.ts  admin-logs-store.test.ts  admin-system-store.test.ts  api-client-admin-invites.test.ts  api-client-admin-logs.test.ts  api-client-admin-system.test.ts  api-client-auth.test.ts  api-client-braindump-edit.test.ts  api-client-chat.test.ts  api-client-inferences.test.ts  api-client-ingest.test.ts  api-client-merge.test.ts  api-client.test.ts  app-page-focus-sync.test.ts  app-tabs.test.ts  auth-flow.test.ts  chat-citations.test.ts  chat-markdown.test.ts  deepgram-proxy-url.test.ts  deepgram-resample.test.ts  delta-sync.test.ts  endorsement-merge.test.ts  endorsement-queue-component.test.ts  endorsement-queue-store.test.ts  format-date.test.ts  frozen-graph-offline.test.ts  frozen-graph.test.ts  graph-build.test.ts  graph-capability.test.ts  graph-colors.test.ts  graph-delta.test.ts  graph-housekeeping-banner.test.ts  graph-load.test.ts  graph-merge-housekeeping.test.ts  graph-merge-ingest.test.ts  (+20 more)
infrastructure/: .env.example  CONTEXT.md  DISASTER_RECOVERY.md  bootstrap.sh  deploy.sh  health-push.cron  health-push.sh  litestream.yml
infrastructure/docs/adr/: 0001-two-service-topology-pwa-baked-into-caddy-reject-paas.md  0002-continuous-wal-replication-of-brain-file-to-r2.md  0003-deploy-pipeline-build-on-gha-push-to-ghcr-command-restricted-ssh-pull.md  0004-secret-model-env-on-host-gha-blind-zero-trust-images.md  0005-observability-pull-admin-tab-push-cron-for-survival.md  0006-backend-internal-only-caddy-sole-published-port.md  0007-sha-pinned-tags-deploy-state-file-for-instant-rollback.md  (+3 more)
infrastructure/edge/: Caddyfile  Caddyfile.prod  Dockerfile
infrastructure/keys/: deploy.pub
infrastructure/test/: deploy.sh  replica.sh  topology.sh  zero-trust-test.sh  zero-trust.sh
(+59 files in other folders)
