[package]
name = "second_brain_backend"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.82"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "macros"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", default-features = false, features = ["util"] }

[profile.release]
lto = "thin"
strip = true
