[package]
name = "second_brain_backend"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.82"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "macros"] }
axum-extra = { version = "0.10", default-features = false, features = ["cookie"] }
base64 = "0.22"
cookie = "0.18"
http = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
petgraph = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", default-features = false, features = ["util"] }
webauthn-authenticator-rs = { version = "0.5", features = ["softpasskey"] }

[profile.release]
lto = "thin"
strip = true
